--- a/cbp/index.html
+++ b/cbp/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- SITE TITLE -->
-    <title>Earn up to 21% APY on stablecoins</title>
+    <title>Yield marketplace for stablecoins | Rivera Money</title>
     <meta name="description"
     content="Maximize your return on stablecoins (USDT & USDC) with advanced yield strategies. Withdraw anytime to your bank account.">
-    <meta property="og:title" content="Earn up to 21% APY on stablecoins">
+    <meta property="og:title" content="Yield marketplace for stablecoins | Rivera Money">
     <meta property="og:description"
         content="Maximize your return on stablecoins (USDT & USDC) with advanced yield strategies. Withdraw anytime to your bank account.">
-    <meta name="keywords" content="stablecoin yield, best yields on stablecoin, maximum return on stablecoins, strategy marketplace">
+    <meta name="keywords" content="rivera, rivera money, stablecoin yield, best yields on stablecoin, maximum return on stablecoins, yield marketplace">
     <meta property="og:image" content="/assets/images/hero_side2.png">
     <!-- Favicon Icon -->
     <link
