--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- SITE TITLE -->
-    <title>Rivera - One stop solution for DeFi Investments</title>
+    <title>Rivera Money - One stop solution for DeFi investments</title>
     <meta name="description"
     content="A marketplace for vetted DeFi protocols and risk-assessed yield strategies aggregated in a secure and intuitive crypto wallet.">
-    <meta property="og:title" content="Rivera - One stop solution for DeFi Investments">
+    <meta property="og:title" content="Rivera Money - One stop solution for DeFi investments">
     <meta property="og:description"
         content="A marketplace for vetted DeFi protocols and risk-assessed yield strategies aggregated in a secure and intuitive crypto wallet.">
-    <meta name="keywords" content="yield strategy, DeFi wallet, cross-chain strategy, liquidity mining, one stop DeFi solution, strategy marketplace">
+    <meta name="keywords" content="rivera, rivera money, yield mining, DeFi wallet, cross-chain strategy, liquidity mining, one stop DeFi solution, yield marketplace">
     <meta property="og:image" content="/assets/images/luxury_bggg.webp">
    
     <!-- Favicon Icon -->
@@ -324,17 +324,18 @@
             </div>
           </div>
           <div class="gateWay_flex_mobile_inner mb-5">
-            <div class="mb-3"><img src="assets/images/inestor_mbl2.webp" alt="Educated & risk-assesed positions" class="wdt_90"></div>
-            <div class="list_header mb-2">Educated & risk-assesed positions ​​</div>
-            <div>With the in-app guide, take educated yield-farming decisions with strategy mechanism and risks explained
-            </div>
-          </div>
-          <div class="gateWay_flex_mobile_inner mb-5">
             <div class="mb-3"><img src="assets/images/inestor_mbl3.webp" alt="Marketplace" class="wdt_90"></div>
             <div class="list_header mb-2">Marketplace for advance strategies</div>
             <div>A marketplace for advanced algorithms operating cross-chain to unleash the true potential of yield farming
             </div>
           </div>
+          <div class="gateWay_flex_mobile_inner mb-5">
+            <div class="mb-3"><img src="assets/images/inestor_mbl2.webp" alt="Educated & risk-assesed positions" class="wdt_90"></div>
+            <div class="list_header mb-2">Educated & risk-assesed positions ​​</div>
+            <div>With the in-app guide, take educated yield-farming decisions with strategy mechanism and risks explained
+            </div>
+          </div>
+          
           <div class="gateWay_flex_mobile_inner">
             <div class="mb-3"><img src="assets/images/inestor_mblt4.webp" alt="DeFi safely and seamlessly" class="wdt_90"></div>
             <div class="list_header mb-2">Bridging to DeFi safely and seamlessly</div>
