--- a/cbp/index.html
+++ b/cbp/index.html
@@ -13,7 +13,7 @@
     <meta property="og:description"
         content="Maximize your return on stablecoins (USDT & USDC) with advanced yield strategies. Withdraw anytime to your bank account.">
     <meta name="keywords" content="rivera, rivera money, stablecoin yield, best yields on stablecoin, maximum return on stablecoins, yield marketplace">
-    <meta property="og:image" content="/assets/images/hero_side2.png">
+    <meta property="og:image" content="/assets/images/hero_side2.webp">
     <!-- Favicon Icon -->
     <link
       rel="shortcut icon"
@@ -285,7 +285,7 @@
           </div>
           <div class="col-lg-5 col-md-12 col-sm-12 order-first">
             <div class="hero_wdth">
-              <img src="/assets/images/hero_side2.png" style="width: 100%;" alt="Cover Image">
+              <img src="/assets/images/hero_side2.webp" style="width: 100%;" alt="Cover Image">
             </div>
           </div>
         </div>
@@ -298,10 +298,10 @@
       <div class="custom-container">
         <div class="flex_cnt">
           <div class="stack_first">
-            <div class="txt_wht txt_size_investment">
+            <h1 class="txt_wht txt_size_investment">
               <img src="/assets/images/blueChip.svg" class="invstment_img" alt="Bluechip Lending">
               Bluechip Lending
-            </div>
+            </h1>
             <div class="stack_inner_txt mt-4 mb-5">
               Safe overcollateralized bluechip lending. The strategy combines collateralized lending with cross-chain arbitrage to maximize low risk yields.
             </div>
@@ -387,9 +387,9 @@
     <!-- START SECTION SERVICES -->
     <section class="section_gap_black_white section_gap_black_white_pb">
       <div class="custom-container">
-        <div class="section_subheader text-center mb-5 section_subheader_res">
+        <h1 class="section_subheader text-center mb-5 section_subheader_res">
           Simple Solution, Higher Returns
-        </div>
+        </h1>
         <div class="flex_cnt">
           <div class="return_section">
             <div class="stack_img mb-4">
@@ -423,10 +423,10 @@
     <!-- SECTION MOBILE APP -->
     <section class="wht_bck_mt">
       <div class="custom-container-simple">
-        <div class="section_subheader text-center mb-5">
+        <h1 class="section_subheader text-center mb-5">
           <span class="gradient_txt">Highest quality research</span> <br>
           <span style="color: black">to lay your worries at rest </span>
-        </div>
+        </h1>
         <div class="flx_cnt">
           <div class="wdt_50 wdt_res90">
             <div>
@@ -488,7 +488,7 @@
           <div class="wdt_50 wdt_res">
             <div>
               <img
-                src="/assets/images/research.png" alt="Highest quality research"
+                src="/assets/images/research.webp" alt="Highest quality research"
                 style="width: 350px"
                 
               />
@@ -508,10 +508,10 @@
       style="background-color: white; padding-top: 0px !important"
     >
       <div class="custom-container-simple">
-        <div class="section_subheader text-center mb-4" style="padding: 30px 0px 0px;">
+        <h1 class="section_subheader text-center mb-4" style="padding: 30px 0px 0px;">
           <span class="gradient_txt">Fully </span>
           <span style="color: black">Compliant</span>>
-        </div>
+        </h1>
         <div class="flx_cnt mb-5">
           <div class="wdt_50 wdt_res80">
             <div>
@@ -552,7 +552,7 @@
           </div>
           <div class="wdt_50">
             <img
-              src="/assets/images/globe.png"
+              src="/assets/images/globe.webp"
               style="width: 400px" alt="Globe Icon"
             />
           </div>
@@ -568,9 +568,9 @@
         <div class="earlyAccess_backgrnd">
           <div class="row align-items-center">
             <div class="col-lg-6 col-md-12 col-sm-12 res_md_mt_30 res_sm_mt_20">
-              <div class="earlyaccess_subHeader">
+              <h1 class="earlyaccess_subHeader">
                 Community Building App <br> Launching Soon!
-              </div>
+              </h1>
               <div class="mt-4 mb_15_res">
                 A custodial crypto wallet and strategy marketplace to maximize yield on your stablecoins. Signup for early access and get exclusive rewards.
               </div>
