--- a/index.html
+++ b/index.html
@@ -285,9 +285,9 @@
     <!-- START SECTION SERVICES -->
     <section>
       <div class="custom-container dsk_device">
-        <div class="section_subheader text-center section_subheader_res mt_60 mb_80">
+        <h1 class="section_subheader text-center section_subheader_res mt_60 mb_80">
           Investors friendly experience
-          </div>
+        </h1>
        <div class="gateWay_flex">
          <div class="gateWay_flex_inner">
              <div>
@@ -360,7 +360,7 @@
                   <div>
                     <img src="assets/images/tag.webp" alt="Stablecoins" class="img_tag">
                   </div>
-                  <div class="section_subheader mb-2">Earn up to 21% APY on your stablecoins</div>
+                  <h1 class="section_subheader mb-2">Earn up to 21% APY on your stablecoins</h1>
                   <div class="mb-4">
                     Maximize your return on stablecoins (USDT & USDC) with advanced yield strategies. Withdraw anytime to your bank account.
                   </div>
@@ -399,7 +399,7 @@
               <div>
                 <div class="product_list_inner">
                   <div>
-                    <div class="mb-2 gradient_txt"><span class="section_subheader">RIVERA</span><span class="list_header ml-3">Crypto Wallet &  Strategy Marketplace​</span></div>
+                    <h1 class="mb-2 gradient_txt"><span class="section_subheader">RIVERA</span><span class="list_header ml-3">Crypto Wallet &  Strategy Marketplace​</span></h1>
                     <div class="mb-2 offr_height_clor">
                       An intuitive marketplace for vetted DeFi protocols & yield strategies.​ Secure non-custodial wallet with biometric activated auto-recovery.
                     </div>
@@ -422,7 +422,7 @@
             <div>
               <div class="product_list_inner">
                 <div>
-                  <div class="mb-2 gradient_txt"><span class="section_subheader">SEAL</span><span class="list_header ml-3">Cross-chain Yield Farming Protocol​</span></div>
+                  <h1 class="mb-2 gradient_txt"><span class="section_subheader">SEAL</span><span class="list_header ml-3">Cross-chain Yield Farming Protocol​</span></h1>
                   <div class="mb-2 offr_height_clor">
                     Earn industry-leading APY on your crypto with our risk-assessed native investment protocol built with combinations of DeFi yield strategies.
                   </div>
@@ -445,7 +445,7 @@
           <div>
             <div class="product_list_inner">
               <div>
-                <div class="mb-2 gradient_txt"><span class="section_subheader">REEF </span><span class="list_header ml-3">Deep Liquidity Lending Protocol </span></div>
+                <h1 class="mb-2 gradient_txt"><span class="section_subheader">REEF </span><span class="list_header ml-3">Deep Liquidity Lending Protocol </span></h1>
                 <div class="mb-2 offr_height_clor">
                   Enable deep liquidity for your investments. Take loans in a wide range of crypto and synthetic assets without exiting your positions. 
                 </div>
@@ -503,9 +503,9 @@
     <!-- START SECTION SERVICES -->
     <section class="small_pt mrgn_top_mbl" style="margin-bottom: -30px;">
       <div class="custom-container">
-        <div class="section_subheader text-center mb-4 hrd_section_res">
+        <h1 class="section_subheader text-center mb-4 hrd_section_res">
           Join the DeFi club
-        </div>
+        </h1>
         <div class="text-center mb-5 txt_wht text-md-80">
           Decentralize Finance is more than a means to grow your money. It is a paradigm shift fixing the centralization of financial power and giving you complete control of your money. 
           Enjoy the exclusive benefits and true power of DeFi with Rivera.
@@ -608,9 +608,9 @@
         <div class="earlyAccess_backgrnd">
           <div class="row align-items-center">
             <div class="col-lg-6 col-md-12 col-sm-12 res_md_mt_30 res_sm_mt_20">
-              <div class="earlyaccess_subHeader">
+              <h1 class="earlyaccess_subHeader">
                 Community Building App <br> Launching Soon!
-              </div>
+              </h1>
               <div class="mt-4 mb_15_res">
                 A custodial crypto wallet and strategy marketplace to maximize yield on your stablecoins. Signup for early access and get exclusive rewards.
               </div>
@@ -761,7 +761,7 @@
 
         
 <!-- newsletter Success MOdal -->
-<div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+<div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" 
 aria-hidden="true">
 <div class="modal-dialog modal-dialog-centered modal-md" role="document">
     <div class="modal-content cust_modal">
