--- a/cbp/index.html
+++ b/cbp/index.html
@@ -285,7 +285,8 @@
           </div>
           <div class="col-lg-5 col-md-12 col-sm-12 order-first">
             <div class="hero_wdth">
-              <img src="/assets/images/hero_side2.webp" style="width: 100%;" alt="Cover Image">
+              <img src="/assets/images/hero_side2_ImageSaizeReducer.webp" class="hero_img_mbl_visibility" style="width: 100%;" alt="Cover Image">
+              <img src="/assets/images/hero_side2.webp" class="hero_img_visibility" style="width: 100%;" alt="Cover Image">
             </div>
           </div>
         </div>
