--- a/cbp/index.html
+++ b/cbp/index.html
@@ -34,6 +34,8 @@
     <!-- <link id="layoutstyle" rel="stylesheet" href="/assets/color/theme.css" /> -->
 
     <link rel="stylesheet" href="/assets/css/intlTelInput.css">
+    <link rel="preload" href="/assets/images/hero_side2_ImageSaizeReducer.webp" as="image">
+    <link rel="preload" href="/assets/images/hero_side2.webp" as="image">
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-FSV2F5BBHK"></script>
     <script>
