--- a/cbp/index.html
+++ b/cbp/index.html
@@ -35,7 +35,7 @@
 
     <link rel="stylesheet" href="/assets/css/intlTelInput.css">
     <link rel="preload" href="/assets/images/hero_side2_ImageSaizeReducer.webp" as="image">
-    <link rel="preload" href="/assets/images/hero_side2.webp" as="image">
+    <!-- <link rel="preload" href="/assets/images/hero_side2.webp" as="image"> -->
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-FSV2F5BBHK"></script>
     <script>
@@ -287,8 +287,8 @@
           </div>
           <div class="col-lg-5 col-md-12 col-sm-12 order-first">
             <div class="hero_wdth">
-              <img src="/assets/images/hero_side2_ImageSaizeReducer.webp" class="hero_img_mbl_visibility" style="width: 100%;" alt="Cover Image">
-              <img src="/assets/images/hero_side2.webp" class="hero_img_visibility" style="width: 100%;" alt="Cover Image">
+              <img src="/assets/images/hero_side2_ImageSaizeReducer.webp" style="width: 100%;" alt="Cover Image">
+              <!-- <img src="/assets/images/hero_side2.webp" class="hero_img_visibility" style="width: 100%;" alt="Cover Image"> -->
             </div>
           </div>
         </div>
