--- a/cbp/index.html
+++ b/cbp/index.html
@@ -14,6 +14,7 @@
         content="Maximize your return on stablecoins (USDT & USDC) with advanced yield strategies. Withdraw anytime to your bank account.">
     <meta name="keywords" content="rivera, rivera money, stablecoin yield, best yields on stablecoin, maximum return on stablecoins, yield marketplace">
     <meta property="og:image" content="/assets/images/hero_side2.webp">
+    <link rel="preload" as="image" href="/assets/images/hero_side2_ImageSaizeReducer.webp" />
     <!-- Favicon Icon -->
     <link
       rel="shortcut icon"
@@ -34,7 +35,7 @@
     <!-- <link id="layoutstyle" rel="stylesheet" href="/assets/color/theme.css" /> -->
 
     <link rel="stylesheet" href="/assets/css/intlTelInput.css">
-    <link rel="preload" href="/assets/images/hero_side2_ImageSaizeReducer.webp" as="image">
+    <link rel="preload" as="image" href="/assets/images/hero_side2_ImageSaizeReducer.webp" />
     <!-- <link rel="preload" href="/assets/images/hero_side2.webp" as="image"> -->
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-FSV2F5BBHK"></script>
