--- a/cbp/index.html
+++ b/cbp/index.html
@@ -14,8 +14,7 @@
         content="Maximize your return on stablecoins (USDT & USDC) with advanced yield strategies. Withdraw anytime to your bank account.">
     <meta name="keywords" content="rivera, rivera money, stablecoin yield, best yields on stablecoin, maximum return on stablecoins, yield marketplace">
     <meta property="og:image" content="/assets/images/hero_side2.webp">
-    <link rel="preload" as="image" href="/assets/images/hero_side2.webp" imagesrcset="/assets/images/hero_side2.webp, 
-    /assets/images/hero_side2_ImageSaizeReducer.webp 550w" />
+    <link rel="preload" as="image" href="/assets/images/hero_side2_ImageSaizeReducer.webp" />
     <!-- Favicon Icon -->
     <link
       rel="shortcut icon"
@@ -288,8 +287,8 @@
           </div>
           <div class="col-lg-5 col-md-12 col-sm-12 order-first">
             <div class="hero_wdth">
-              <img src="/assets/images/hero_side2_ImageSaizeReducer.webp" class="hero_img_mbl_visibility" style="width: 100%;" alt="Cover Image">
-              <img src="/assets/images/hero_side2.webp" class="hero_img_visibility" style="width: 100%;" alt="Cover Image">
+              <img src="/assets/images/hero_side2_ImageSaizeReducer.webp"  style="width: 100%;" alt="Cover Image">
+              <!-- <img src="/assets/images/hero_side2.webp" class="hero_img_visibility" style="width: 100%;" alt="Cover Image"> -->
             </div>
           </div>
         </div>
