update meta image

--- a/cbp/index.html
+++ b/cbp/index.html
@@ -13,7 +13,7 @@
     <meta property="og:description"
         content="Maximize your return on stablecoins (USDT & USDC) with advanced yield strategies. Withdraw anytime to your bank account.">
     <meta name="keywords" content="rivera, rivera money, stablecoin yield, best yields on stablecoin, maximum return on stablecoins, yield marketplace">
-    <meta property="og:image" content="/assets/images/hero_side2.webp">
+    <meta property="og:image" content="/assets/images/hero_side2.png">
     <link rel="preload" as="image" href="/assets/images/hero_side2_ImageSaizeReducer.webp" />
     <!-- Favicon Icon -->
     <link
