--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:description"
         content="A marketplace for vetted DeFi protocols and risk-assessed yield strategies aggregated in a secure and intuitive crypto wallet.">
     <meta name="keywords" content="rivera, rivera money, yield mining, DeFi wallet, cross-chain strategy, liquidity mining, one stop DeFi solution, yield marketplace">
-    <meta property="og:image" content="/assets/images/luxury_bggg.webp">
+    <meta property="og:image" content="/assets/images/luxury_bggg.png">
    
     <!-- Favicon Icon -->
     <link
