--- a/index.html
+++ b/index.html
@@ -265,11 +265,11 @@
                       Secure, Convenient and <br class="mob_hidden"> Private Vault for all <span>Valuables</span>
                   </h1> -->
                   <h1 class="industies_hero-title text-white text-extraBold mb-5">
-                    Mobile gateway for <br>
-                    cross-chain yield strategies
+                    Middleware for<br>
+                    Cross-chain Yield Strategies
                   </h1>
                   <p class="mobile_vault_hero-para px-0 text-white">
-                    A marketplace for vetted DeFi protocols and risk-assessed yield strategies aggregated in a secure and intuitive DeFi wallet.
+                    A marketplace for vetted DeFi protocols and risk-assessed yield strategies aggregated in an all-in-one DeFi wallet.
                   </p>
                   <div class="btn_group pt-3 pb-3">
                     <button type="submit" name="submit2" style="margin: auto;"  class="btn btn-default btn-radius nav-link content-popup" onclick="window.location.href='#earlyAccess';">
@@ -440,7 +440,7 @@
           </div>
      
       </div>
-      <div class="row align-items-center product_listing_backgrnd">
+      <div class="row align-items-center product_listing_backgrnd mb_100">
         <div class="col-lg-7 col-md-12 col-sm-12 res_md_mt_30 res_sm_mt_20">
           <div>
             <div class="product_list_inner">
@@ -462,6 +462,28 @@
           </div>
         </div>
     </div>
+    <div class="row align-items-center product_listing_backgrnd">
+      <div class="col-lg-7 col-md-12 col-sm-12 res_md_mt_30 res_sm_mt_20">
+        <div>
+          <div class="product_list_inner">
+            <div>
+              <h1 class="mb-2 gradient_txt"><span class="section_subheader">EDGE </span><span class="list_header ml-3">Cross-chain Strategy Flow Builder </span></h1>
+              <div class="mb-2 offr_height_clor">
+                A UI toolkit and SDK for community developers to build & launch custom yield farming strategies on Rivera.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-5 col-md-12 col-sm-12">
+        <div class="text-right">
+          <img
+            src="assets/images/offer4.webp"
+            alt="EDGE" class="product_listing_backgrnd_img"
+          />
+        </div>
+      </div>
+  </div>
   </div>
     <div class="gateWay_flex_mobile">
       <div class="gateWay_flex_mobile_inner mb-5 mt-5">
@@ -484,7 +506,7 @@
         <div>Earn industry-leading APY on your crypto with our risk-assessed native investment protocol built with combinations of DeFi yield strategies.
         </div>
       </div>
-      <div class="gateWay_flex_mobile_inner">
+      <div class="gateWay_flex_mobile_inner mb-5">
         <div class="mb-3 sl_img_pddng">
           <img class="product_listing_backgrnd_mbl_img mr_20" alt="REEF" src="assets/images/offer3.webp">
           <div>
@@ -492,6 +514,16 @@
           </div>
         </div>
         <div>Enable deep liquidity for your investments. Take loans in a wide range of crypto and synthetic assets without exiting your positions. 
+        </div>
+      </div>
+      <div class="gateWay_flex_mobile_inner">
+        <div class="mb-3 sl_img_pddng">
+          <img class="product_listing_backgrnd_mbl_img mr_20" alt="EDGE" src="assets/images/offer4.webp">
+          <div>
+            <div class="mb-2 gradient_txt text-left"><span class="section_subheader_mob">EDGE</span><br><span class="list_header_mbl">Cross-chain Strategy Flow Builder</span></div>
+          </div>
+        </div>
+        <div>A UI toolkit and SDK for community developers to build & launch custom yield farming strategies on Rivera.
         </div>
       </div>
    </div>
@@ -540,7 +572,7 @@
                   <div class="card-body text-center">
                     <div class="list_header txt_algn_lft">Community owned and governed</div>
                     <div class="stack_img mt_4rm">
-                      <img src="assets/images/gateway222.webp" alt="Community owned" class="flt_lft" />
+                      <img src="assets/images/gateway3.webp" alt="Community owned" style="height: 90px !important;width: 90px;" class="flt_lft" />
                     </div>
                   </div>
                 </div>
@@ -582,7 +614,7 @@
                   <div class="card-body text-center">
                     <div class="list_header txt_algn_lft">Trust-free environment</div>
                     <div class="stack_img mt_4rm">
-                      <img src="assets/images/gateway3.webp" alt="Trust-free environment" class="flt_lft" />
+                      <img src="assets/images/gateway222.webp" alt="Trust-free environment" class="flt_lft" />
                     </div>
                   </div>
                 </div>
