--- a/index.html
+++ b/index.html
@@ -353,6 +353,9 @@
       <div class="custom-container">
 
         <div class="row align-items-center investment_backgrnd">
+          <div>
+            <img src="assets/images/mobile_tag.webp" alt="Stablecoins" class="img_mobile_tag">
+          </div>
           <div class="col-lg-7 col-md-12 col-sm-12 res_md_mt_30 res_sm_mt_20">
             <div>
               <div class="list_inner">
