title and description update

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- SITE TITLE -->
-    <title>Rivera Money - One stop solution for DeFi investments</title>
+    <title>Middleware for Cross-chain Yield Strategies</title>
     <meta name="description"
-    content="A marketplace for vetted DeFi protocols and risk-assessed yield strategies aggregated in a secure and intuitive crypto wallet.">
-    <meta property="og:title" content="Rivera Money - One stop solution for DeFi investments">
+    content="A marketplace for vetted DeFi protocols and risk-assessed yield strategies aggregated in an all-in-one DeFi wallet.">
+    <meta property="og:title" content="Middleware for Cross-chain Yield Strategies">
     <meta property="og:description"
-        content="A marketplace for vetted DeFi protocols and risk-assessed yield strategies aggregated in a secure and intuitive crypto wallet.">
+        content="A marketplace for vetted DeFi protocols and risk-assessed yield strategies aggregated in an all-in-one DeFi wallet.">
     <meta name="keywords" content="rivera, rivera money, yield mining, DeFi wallet, cross-chain strategy, liquidity mining, one stop DeFi solution, yield marketplace">
     <meta property="og:image" content="/assets/images/luxury_bggg.png">
    
