--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
          <div class="gateWay_flex_inner"><img src="assets/images/mobile_gateway.webp" alt="Investors friendly experience"></div>
          <div class="gateWay_flex_inner">
           <div>
-            <div class="gateWay_flex_inner_header_16">Marketplace for advance strategies</div>
+            <div class="gateWay_flex_inner_header_16">Marketplace for advanced strategies</div>
             <div class="line_height_25">A marketplace for advanced algorithms operating cross-chain to unleash the true potential of yield farming</div>
            </div>
            <div class="mt_80">
@@ -325,7 +325,7 @@
           </div>
           <div class="gateWay_flex_mobile_inner mb-5">
             <div class="mb-3"><img src="assets/images/inestor_mbl3.webp" alt="Marketplace" class="wdt_90"></div>
-            <div class="list_header mb-2">Marketplace for advance strategies</div>
+            <div class="list_header mb-2">Marketplace for advanced strategies</div>
             <div>A marketplace for advanced algorithms operating cross-chain to unleash the true potential of yield farming
             </div>
           </div>
@@ -363,7 +363,7 @@
                   <div>
                     <img src="assets/images/tag.webp" alt="Stablecoins" class="img_tag">
                   </div>
-                  <h1 class="section_subheader mb-2">Earn up to 21% APY on your stablecoins</h1>
+                  <h1 class="section_subheader mb-2">Earn up to 16% APY on your stablecoins</h1>
                   <div class="mb-4">
                     Maximize your return on stablecoins (USDT & USDC) with advanced yield strategies. Withdraw anytime to your bank account.
                   </div>
