Bluechip Lending and  Neutral Farming content update

--- a/cbp/index.html
+++ b/cbp/index.html
@@ -306,7 +306,7 @@
               Bluechip Lending
             </h1>
             <div class="stack_inner_txt mt-4 mb-5">
-              Safe overcollateralized bluechip lending. The strategy combines collateralized lending with cross-chain arbitrage to maximize low risk yields.
+              Safe overcollateralized bluechip lending. The strategy combines collateralized lending with cross-chain arbitrage to maximize low-risk yields.
             </div>
             <div class="flex_cnt_mb">
               <div class="right_border">
@@ -347,7 +347,7 @@
               Δ Neutral Farming
             </div>
             <div class="stack_inner_txt mt-4 mb-5">
-              The strategy maximizes return on stablecoins by combining bluechip lending with Δ neutral methods and becoming liquidity providers to both short and long farms to hedge the risks.
+              The strategy optimizes yield by providing liquidity to AMMs and earning rewards. Δ neutral methods are applied to hedge against impermanent loss.
             </div>
             <div class="flex_cnt_mb">
               <div class="right_border">
