--- a/cbp/index.html
+++ b/cbp/index.html
@@ -686,7 +686,7 @@
               <div class="footer_logo mb-3">
                 <div class="ftr_pos">
                   <div>
-                    <a href="https://twitter.com/riverasocial" target="_blank"> <img alt="Twitter" class="wdth_50" src="/assets/images/twitter.png" /></a>
+                    <a href="https://twitter.com/Rivera_Money_" target="_blank"> <img alt="Twitter" class="wdth_50" src="/assets/images/twitter.png" /></a>
                   </div>
                 </div>
               </div>
