--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- SITE TITLE -->
-    <title> Middleware for Cross-chain Composability of DeFi Products</title>
+    <title>Middleware for Cross-chain DeFi Strategies</title>
     <meta name="description"
-    content=" A middleware protocol enabling 1-click execution and community development of advanced cross-chain strategies.">
-    <meta property="og:title" content=" Middleware for Cross-chain Composability of DeFi Products">
+    content="A protocol enabling 1-click execution and community developed cross-chain DeFi strategies.">
+    <meta property="og:title" content="Middleware for Cross-chain DeFi Strategies">
     <meta property="og:description"
-        content=" A middleware protocol enabling 1-click execution and community development of advanced cross-chain strategies.">
+        content="A protocol enabling 1-click execution and community developed cross-chain DeFi strategies.">
     <meta name="keywords" content="rivera, rivera money, yield mining, DeFi wallet, cross-chain strategy, liquidity mining, one stop DeFi solution, yield marketplace">
     <meta property="og:image" content="/assets/images/luxury_bggg.png">
    
@@ -264,12 +264,12 @@
                   <!-- <h1 class="mobile_vault_hero-title text-white">
                       Secure, Convenient and <br class="mob_hidden"> Private Vault for all <span>Valuables</span>
                   </h1> -->
-                  <h2 class="industies_hero-title text-white text-extraBold mb-5">
-                    Middleware for Cross-chain<br>
-                    Composability of DeFi Products
-                  </h2>
+                  <h1 class="industies_hero-title text-white text-extraBold mb-5">
+                    Middleware for<br>
+                    Cross-chain DeFi Strategies
+                  </h1>
                   <p class="mobile_vault_hero-para px-0 text-white">
-                    A middleware protocol enabling 1-click execution and community development of advanced cross-chain strategies.
+                    A protocol enabling 1-click execution and community developed cross-chain DeFi strategies.
                   </p>
                   <div class="btn_group pt-3 pb-3">
                     <button type="submit" name="submit2" style="margin: auto;"  class="btn btn-default btn-radius nav-link content-popup" onclick="window.location.href='#earlyAccess';">
@@ -303,11 +303,11 @@
          <div class="gateWay_flex_inner">
           <div>
             <div class="gateWay_flex_inner_header_16">Pre-vetted products only</div>
-            <div class="line_height_25">All DeFi products in the Rivera ecosystem are pre-vetted by DAO to safeguard users from malicious products</div>
+            <div class="line_height_25">All DeFi products in the ecosystem are pre-vetted by DAO to safeguard users from malicious offerings</div>
            </div>
            <div class="mt_80">
             <div class="gateWay_flex_inner_header_16">Seamless bridge to DeFi</div>
-            <div class="line_height_25">Lowering adoption barriers for investors & fund managers alike with 1-click execution & flow builder SDK</div>
+            <div class="line_height_25">Lowering adoption barriers for DeFi investors & fund managers alike with 1-click execution & flow builder SDK</div>
            </div>
         </div>
        </div>
@@ -326,7 +326,7 @@
           <div class="gateWay_flex_mobile_inner mb-5">
             <div class="mb-3"><img src="assets/images/inestor_mbl2.webp" alt="Pre-vetted products only" class="wdt_90"></div>
             <div class="list_header mb-2">Pre-vetted products only</div>
-            <div>All DeFi products in the Rivera ecosystem are pre-vetted by DAO to safeguard users from malicious products
+            <div>All DeFi products in the ecosystem are pre-vetted by DAO to safeguard users from malicious offerings
             </div>
           </div>
           <div class="gateWay_flex_mobile_inner mb-5">
@@ -339,7 +339,7 @@
           <div class="gateWay_flex_mobile_inner">
             <div class="mb-3"><img src="assets/images/inestor_mbl1.webp" alt="Seamless bridge to DeFi" class="wdt_90"></div>
             <div class="list_header mb-2">Seamless bridge to DeFi</div>
-            <div>Lowering adoption barriers for investors & fund managers alike with 1-click execution & flow builder SDK
+            <div>Lowering adoption barriers for DeFi investors & fund managers alike with 1-click execution & flow builder SDK
             </div>
           </div>
        </div>
@@ -402,9 +402,9 @@
               <div>
                 <div class="product_list_inner">
                   <div>
-                    <h1 class="mb-2 gradient_txt"><span class="section_subheader">RIVERA</span><span class="list_header ml-3">Crypto Wallet &  Strategy Marketplace​</span></h1>
+                    <h1 class="mb-2 gradient_txt"><span class="section_subheader">RIVERA</span><span class="list_header ml-3">Marketplace for DeFi Strategies</span></h1>
                     <div class="mb-2 offr_height_clor">
-                      An intuitive marketplace for vetted DeFi protocols & yield strategies.​ Secure non-custodial wallet with biometric activated auto-recovery.
+                      An intuitive marketplace for vetted DeFi protocols & risk-assessed advanced strategies.​ Execute fully automated cross-chain strategies with a click.
                     </div>
                   </div>
                 </div>
@@ -492,10 +492,10 @@
         <div class="mb-3 sl_img_pddng">
           <img class="product_listing_backgrnd_mbl_img mr_20" alt="RIVERA" src="assets/images/offer1.webp">
           <div>
-            <div class="mb-2 gradient_txt text-left"><span class="section_subheader_mob">RIVERA</span><br><span class="list_header_mbl">Crypto Wallet &  Strategy Marketplace​</span></div>
+            <div class="mb-2 gradient_txt text-left"><span class="section_subheader_mob">RIVERA</span><br><span class="list_header_mbl">Marketplace for DeFi Strategies</span></div>
           </div>
         </div>
-        <div>An intuitive marketplace for vetted DeFi protocols & yield strategies.​ Secure non-custodial wallet with biometric activated auto-recovery.
+        <div>An intuitive marketplace for vetted DeFi protocols & risk-assessed advanced strategies.​ Execute fully automated cross-chain strategies with a click.
         </div>
       </div>
       <!-- <div class="gateWay_flex_mobile_inner mb-5">
@@ -769,7 +769,7 @@
                     <img class="wdth_50" src="assets/images/linknd.png" />
                   </div> -->
                   <div>
-                    <a href="https://twitter.com/riverasocial" target="_blank"> <img alt="Twitter" class="wdth_50" src="assets/images/twitter.png" /></a>
+                    <a href="https://twitter.com/Rivera_Money_" target="_blank"> <img alt="Twitter" class="wdth_50" src="assets/images/twitter.png" /></a>
                   </div>
                 </div>
               </div>
