--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                   <div>
                     <h1 class="mb-2 gradient_txt"><span class="section_subheader">RIVERA</span><span class="list_header ml-3">Marketplace for DeFi Strategies</span></h1>
                     <div class="mb-2 offr_height_clor">
-                      An intuitive marketplace for vetted DeFi protocols & risk-assessed advanced strategies.​ Execute fully automated cross-chain strategies with a click.
+                      An intuitive marketplace for pre-vetted DeFi protocols & advanced strategies.​ Execute cross-chain strategies with a click.
                     </div>
                   </div>
                 </div>
@@ -495,7 +495,7 @@
             <div class="mb-2 gradient_txt text-left"><span class="section_subheader_mob">RIVERA</span><br><span class="list_header_mbl">Marketplace for DeFi Strategies</span></div>
           </div>
         </div>
-        <div>An intuitive marketplace for vetted DeFi protocols & risk-assessed advanced strategies.​ Execute fully automated cross-chain strategies with a click.
+        <div>An intuitive marketplace for pre-vetted DeFi protocols & advanced strategies.​ Execute cross-chain strategies with a click.
         </div>
       </div>
       <!-- <div class="gateWay_flex_mobile_inner mb-5">
